--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 header {
-    padding: 10px 300px;
+    padding: 10px 200px;
+    height: 60px;
+    background-color: #1F2937;
 }
 
 header ul {
@@ -13,11 +17,26 @@ header ul {
     justify-content: space-between;
     list-style: none;
     width: 100%;
+    height: 100%;
+}
+
+header li {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-family: ;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header-logo {
+    height: 100%;
+    width: auto;
 }
 
 #header-links {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 40%;
+    gap: 40px;
+    font-family: 'Roboto', sans-serif;
 }
