--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,49 @@ header li {
     gap: 40px;
     font-family: 'Roboto', sans-serif;
 }
+
+#welcome {
+    height: 250px;
+    font-family: 'Roboto', sans-serif;
+    padding: 20px 200px;
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#welcome-content {
+    height: 100%;
+    width: 48%; 
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: space-around;
+}
+
+#welcome-content h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+#welcome-content p {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+#welcome-content button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 10%;
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 800;
+    width: 120px;
+    height: 40px;
+}
+
+.img {
+    width: 48%;
+    background-color: red;
+}
